# DigitalCurling

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README-en.md  README.md
digital_curling/: CMakeLists.txt
digital_curling/include/digital_curling/: digital_curling.hpp
digital_curling/include/digital_curling/detail/: constants.hpp  coordinate.hpp  vector2.hpp  version.hpp
digital_curling/include/digital_curling/detail/game/: apply_move.hpp  constants.hpp  result.hpp  setting.hpp  state.hpp  team.hpp
digital_curling/include/digital_curling/detail/simulation/: simulator.hpp  simulator_fcv1_setting.hpp  simulator_setting.hpp  stone_collision.hpp  stone_data.hpp
digital_curling/src/: game_apply_move.cpp  game_random_normal_dist_shot_randomizer.cpp  game_random_random_seed_normal_dist_shot_randomizer.cpp  game_random_shot_randomizer.cpp  shot_randomizer_common.hpp  simulation_fcv1.cpp  simulation_fcv1.hpp  simulation_simulator_setting.cpp  vector2.cpp
doc/: CMakeLists.txt  coordinate.md  doc.md  doxygen-awesome.css  extend_library.md  json.md  mainpage.md  making_ai.md  players.md  protocol.md  server.md  simulators.md
docs/: CMakeLists.txt  coordinate.md  json.md  mainpage.md  players.md  simulators.md
json/: CMakeLists.txt
json/include/digital_curling/: json.hpp
json/include/digital_curling/detail/json/: polymorphic_conversion.hpp
json/src/: json.cpp
server/: CMakeLists.txt  config.cpp  config.hpp  game.cpp  game.hpp  log.cpp  log.hpp  main.cpp  server.cpp  server.hpp  tcp_session.cpp  tcp_session.hpp  trajectory_compressor.cpp  trajectory_compressor.hpp  util.cpp  util.hpp
src/: CMakeLists.txt  apply_move.cpp  box2d_util.hpp  game_apply_move.cpp  game_common.cpp  game_normal.cpp  game_normal_dist_shot_randomizer.cpp  game_random_normal_dist_shot_randomizer.cpp  game_random_seed_normal_dist_shot_randomizer.cpp  game_random_shot_randomizer.cpp  game_setting.cpp  game_state.cpp  i_player_factory.cpp  i_player_storage.cpp  i_simulator_factory.cpp  i_simulator_storage.cpp  move.cpp  normal_game.cpp  players_identical_player.cpp  players_identical_player.hpp  players_identical_player_factory.cpp  players_identical_player_storage.cpp  players_identical_player_storage.hpp  players_normal_dist_player.cpp  players_normal_dist_player.hpp  players_normal_dist_player_factory.cpp  players_normal_dist_player_storage.cpp  players_normal_dist_player_storage.hpp  players_player_identical.hpp  players_player_identical_storage.cpp  players_player_normal_dist.cpp  players_player_normal_dist_storage.hpp  players_player_original1.cpp  players_player_original1.hpp  players_player_original1_factory.cpp  players_player_original1_storage.cpp  players_player_original1_storage.hpp  shot_randomizer_common.hpp  simulation_fcv1.cpp  simulation_fcv1.hpp  (+9 more)
src/core/: CMakeLists.txt
src/core/include/digitalcurling/: common.hpp  constants.hpp  coordinate.hpp  digitalcurling.hpp  game_result.hpp  game_rule.hpp  game_scores.hpp  game_setting.hpp  game_state.hpp  i_player.hpp  i_player_factory.hpp  i_player_storage.hpp  i_simulator.hpp  i_simulator_factory.hpp  i_simulator_storage.hpp  move.hpp  stone.hpp  stone_coordinate.hpp  stone_index.hpp  team.hpp  transform.hpp  vector2.hpp  version.hpp
src/core/include/digitalcurling/detail/: version_info.hpp.in
src/core/include/digitalcurling/moves/: concede.hpp  move.hpp  shot.hpp
src/core/include/digitalcurling/players/: gender.hpp  i_player.hpp  i_player_factory.hpp  i_player_storage.hpp
src/core/include/digitalcurling/plugins/: i_plugin_object.hpp
src/core/include/digitalcurling/rules/: free_guard_zone.hpp  i_additional_rule.hpp  no_tick_shot.hpp
src/core/include/digitalcurling/simulators/: i_simulator.hpp  i_simulator_factory.hpp  i_simulator_storage.hpp
src/core/include/digitalcurling3/: constants.hpp  coordinate.hpp  digitalcurling3.hpp  game_state.hpp  i_player.hpp  i_player_storage.hpp  move.hpp  team.hpp
src/core/include/digitalcurling3/detail/: apply_move.hpp  common.hpp  constants.hpp  coordinate.hpp  game_result.hpp  move.hpp  (+13 more)
src/core/src/: CMakeLists.txt  game_state.cpp  i_player_factory.cpp  i_simulator_storage.cpp  players_player_identical.cpp  players_player_identical_factory.cpp  players_player_normal_dist.hpp  players_player_normal_dist_factory.cpp  version.cpp.in
src/core/test/: CMakeLists.txt  common.cpp  common.hpp  test_coordinate.cpp  test_json.cpp
src/player/: CMakeLists.txt
src/player/src/identical/: CMakeLists.txt  identical.cpp  identical.hpp  player_identical.cpp  player_identical.hpp  player_identical_factory.cpp  player_identical_factory.hpp  player_identical_storage.cpp  player_identical_storage.hpp
src/player/src/normal_dist/: CMakeLists.txt  normal_dist.cpp  normal_dist.hpp  player_normal_dist.cpp  player_normal_dist.hpp  player_normal_dist_factory.cpp  player_normal_dist_factory.hpp  player_normal_dist_storage.cpp  player_normal_dist_storage.hpp
src/player/test/: common.cpp  common.hpp  test_identical.cpp  test_json.cpp  test_normal_dist.cpp  test_player.cpp
src/plugin-api/: CMakeLists.txt
src/plugin-loader/: CMakeLists.txt
src/plugin-loader/src/players/: plugin_player.cpp
src/plugin-loader/src/plugins/: loader.cpp  native_loader.cpp  plugin_manager.cpp  plugin_resource.cpp
src/plugin-loader/src/simulators/: plugin_simulator.cpp
src/plugin-loader/test/: common.hpp  dynamic_test_base.cpp  dynamic_test_base.hpp  test_dynamic_loader.cpp  test_dynamic_manager.cpp  test_static_loader.cpp  test_static_manager.cpp
src/simulator/: CMakeLists.txt
src/simulator/cmake/: patch_box2d.cmake
src/simulator/src/fcv1/: CMakeLists.txt  box2d_util.hpp  fcv1.cpp  fcv1.hpp  simulator_fcv1.cpp  simulator_fcv1.hpp  simulator_fcv1_factory.cpp  simulator_fcv1_factory.hpp  simulator_fcv1_storage.cpp  simulator_fcv1_storage.hpp
src/simulator/test/: common.cpp  common.hpp  test_fcv1.cpp  test_json.cpp  test_simulator.cpp
tests/: CMakeLists.txt
tests/test/: common.hpp  test_coordinate.cpp  test_json.cpp  test_player.cpp  test_simulator.cpp  util.cpp  util.hpp
(+109 files in other folders)
